--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,15 @@
   <link rel="stylesheet" href="styles/style.css" />
 
   <!-- link the main js file -->
-  <script type="text/javascript" src="scripts/app.js" defer></script>
+  <script type="module" src="scripts/app.js"></script>
 
 </head>
 
 <body>
   <h1>Hello, World!</h1>
   <p>
-    This is my first web app.
+    This is my first web app oh yeah oh yeah! 
+
   </p>
 </body>
 
